Fix for bug #8894 "TIMESTAMP values scrambled/misaligned when using --new".

Fixed Field_timestamp::val_int() so now it works correctly in --new mode
(or for TIMESTAMP(19) columns). 
Also removed unused Field_timestamp::fill_and_store() method.


mysql-test/r/type_timestamp.result:
  Added test for bug #8894 "TIMESTAMP values scrambled/misaligned when 
  using --new".
mysql-test/t/type_timestamp.test:
  Added test for bug #8894 "TIMESTAMP values scrambled/misaligned when 
  using --new".
sql/field.cc:
  Field_timestamp::fill_and_store() 
    Removed unused method.
  Field_timestamp::val_int()
    Even in --new mode integer representation of TIMESTAMP value should
    not exceed 14 digits.
sql/field.h:
  Removed unused Field_timestamp::fill_and_store() method.